# optcgsim-haki

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/decks/: page.tsx
frontend/app/decks/detail/: page.tsx
frontend/app/matches/: page.tsx
frontend/app/matches/detail/: page.tsx
frontend/app/overlay/: page.tsx
frontend/app/stats/: page.tsx
frontend/components/: ArchetypePanel.tsx  Card.tsx  Charts.tsx  CoachAlerts.tsx  Collapsible.tsx  DefensePanel.tsx  DrawOddsPanel.tsx  ImpactLists.tsx  LethalPanel.tsx  LifeDisplay.tsx  MatchBar.tsx  MatchTimelineView.tsx  MenacesPanel.tsx  MetaCheckPanel.tsx  MulliganPanel.tsx  MulliganReco.tsx  OpeningOddsPanel.tsx  OppKnownHandPanel.tsx  OppSeenPanel.tsx  PlayerPanel.tsx  Tooltip.tsx  ValueScorePanel.tsx  WinrateBar.tsx
frontend/lib/: api.ts  match-types.ts  stats-tips.ts  stats-types.ts  types.ts
optcgsim_haki/: analytics.py  archetype.py  cardnames.py  cli.py  engine.py  features.py  formats.py  hypergeometric.py  ingest.py  live.py  resources.py  sources.py
optcgsim_haki/api/: __init__.py  server.py
optcgsim_haki/db/: schema.sql
optcgsim_haki/overlay/: app.py  macwin.py
optcgsim_haki/parser/: loglines.py  match.py
optcgsim_tracker/: card_effects.py  carddb.py  cardimages.py  cardmeta.py  cli.py  deck_match.py  deckstats.py  engine.py  exact_state.py  features.py  live.py  meta.py  model.py  paths.py  resources.py  sources.py  stats.py  watcher.py
optcgsim_tracker/api/: __init__.py  server.py
optcgsim_tracker/db/: store.py
optcgsim_tracker/overlay/: __init__.py  app.py  geometry.py
optcgsim_tracker/parser/: loglines.py  my_matches.py  rz1.py
scripts/: assign_decks.py  build_frontend.sh  check_exact_state.py  fetch_card_stats.py  recover_results.py
tests/: conftest.py  test_analytics.py  test_api.py  test_cardmeta.py  test_cardnames.py  test_counter_event.py  test_deck_match.py  test_deckstats.py  test_draw_odds.py  test_engine.py  test_exact_state.py  test_features.py  test_formats.py  test_hypergeometric.py  test_ingest.py  test_meta.py  test_overlay_geometry.py  test_parser.py  test_store.py
