[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optcgsim-haki"
dynamic = ["version"]
description = "Open-source stats tracker for OPTCGSim (One Piece TCG simulator) — parses local game logs into a queryable SQLite database."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "watchdog>=3.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "build>=1.3",
    "httpx>=0.27",
    "pytest>=7.0",
    "pytest-cov>=6.0",
    "ruff>=0.14",
    "twine>=6.1",
]
# Overlay HUD natif (macOS) : fenêtre transparente always-on-top click-through.
overlay = [
    "pywebview>=5",
    "pyobjc-framework-Cocoa>=10",
    "pyobjc-framework-Quartz>=10",
]

[project.scripts]
optcgsim-haki = "optcgsim_haki.cli:main"

[tool.setuptools.packages.find]
include = ["optcgsim_haki*"]

[tool.setuptools.dynamic]
version = { attr = "optcgsim_haki.__version__" }

[tool.setuptools.package-data]
optcgsim_haki = ["db/schema.sql", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
