[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optcgsim-haki"
version = "0.1.0"
description = "Open-source stats tracker for OPTCGSim (One Piece TCG simulator) — parses local game logs into a queryable SQLite database."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "watchdog>=3.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27"]  # httpx : requis par fastapi.testclient.TestClient
# Overlay HUD natif (macOS) : fenêtre transparente always-on-top click-through.
overlay = [
    "pywebview>=5",
    "pyobjc-framework-Cocoa>=10",
    "pyobjc-framework-Quartz>=10",
]

[project.scripts]
optcgsim-haki = "optcgsim_haki.cli:main"

[tool.setuptools.packages.find]
include = ["optcgsim_haki*"]

[tool.setuptools.package-data]
# schema.sql : lu au runtime par db/store.py (indispensable). static/** : dashboard embarqué.
optcgsim_haki = ["db/*.sql", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
